openshift/observability-operator-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cluster-observability-operator
